# box_gen

./: .gitignore  Cargo.toml  build.rs  config - 副本 (2).json  config - 副本.json  config copy 2.json  config copy 3.json  config copy 4.json  config copy 5.json  config copy 6.json  config copy.json  config.json  d.txt  i2.mtl  o.csv  out.txt  precise.txt  run.bat  s.txt  temp.txt  variables copy.json  variables.json  variables2.json  模拟场景1.blend
src/: areagen.rs  cacl.rs  config.rs  lib.rs  main.rs  path_planning.rs  support_type.rs  utils.rs  vec2d.rs
temp - 副本/: info.txt  rrt_move.csv
testing/: CMakeLists.txt  main.c
testing/libs/: box_gen.dll.exp  box_gen.dll.lib
太重实验/: config_latest.json
实验/20250313/: config.json
